updated contents added animation

--- a/public/assets/scss/locals/about-page.scss
+++ b/public/assets/scss/locals/about-page.scss
@@ -52,7 +52,7 @@
         .vision-label {
             font-size: 40px;
             font-weight: 100;
-            color: $light-blue;
+            color: $metalic-gold;
         }
 
         .vision-heading {
