--- a/public/assets/scss/locals/home.scss
+++ b/public/assets/scss/locals/home.scss
@@ -24,6 +24,7 @@
         border-bottom-right-radius: 12px;
         padding-bottom: 20px;
         overflow-x: auto;
+        overflow-y: hidden;
 
 
 
@@ -162,7 +163,7 @@
         justify-content: center;
         padding-bottom: 40px;
         overflow-x: auto;
-
+        overflow-y: hidden;
 
 
         &::-webkit-scrollbar {
