--- a/public/assets/scss/locals/home.scss
+++ b/public/assets/scss/locals/home.scss
@@ -221,7 +221,7 @@
                     letter-spacing: 0;
                     font-weight: 900;
                     line-height: 1;
-                    max-width: 180px;
+                    text-align: end;
 
                 }
 
