--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -174,6 +174,14 @@ label {
 .book-stand-btn-image{
     width: 200px;
     object-fit: contain;
+
+    @media screen and (max-width: 1000px) {
+        width: 150px;
+    }
+
+    @media screen and (max-width: 600px) {
+        width: 120px;
+    }
 }
 
 
